fixing the searchform

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta charset="utf-8">
+    <title>Stocks</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="container">
+      <div class="row">
+
+          <div id="app"></div>
+        
+      </div>
+    </div>
+
+    <script src='bundle.js'></script>
+
   </body>
 </html>
